vercre-vci/src/endpoint/snapshots/vercre_vci__endpoint__batch__tests__ci-response.snap
---
source: vercre-vci/src/endpoint/batch.rs
assertion_line: 591
expression: response
---
credential_responses:
  - "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"

